# cvstudio

./: .gitignore
DimmedLine/: CMakeLists.txt
DimmedLine/src/: main.cpp
ExtractingText/: .gitignore  CMakeLists.txt  build.sh
ExtractingText/analyze/distance_transform_insight/: ex4.py
ExtractingText/auto_scripts/labelling_character/: labelling.py  requirements.txt
ExtractingText/solution/: approach_01.txt  features_2d.txt  go_deep_svm.txt  go_deep_svm_01.odt  go_deep_svm_02.odt  go_deep_svm_02.txt  go_deep_svm_o10_01. txt  imgproc_api_enumR1.txt  method_accurate_r2.txt  svm_enum02.txt  svm_enum_01.txt  technique_02.txt  technique_04.txt  technique_05.txt  technique_06.txt  technique_07.txt  technique_08.txt  technique_09.txt  technique_10.txt  technique_11.txt  technique_12.txt  technique_13.txt  technique_14.txt  technique_15.txt  technique_16.txt  technique_17.txt  technique_18.txt  technique_19.txt  technique_20.txt  technique_3.txt  techniques.txt
ExtractingText/src/: main.cpp
ExtractingText/src/app/examples/background/: CDistanceTransformTest.cpp  CDistanceTransformTest.h  CHoughLineTest.cpp  CHoughLineTest.h  CModelingTest.cpp  CModelingTest.h  CSlamTest.cpp  CSlamTest.h  CVTKTest.cpp  CVTKTest.h
ExtractingText/src/app/impl/application/: CAffineTransform.cpp  CAffineTransform.h  CAnisotropicSegmentation.cpp  CAnisotropicSegmentation.h  CBackprojectApp.cpp  CBackprojectApp.h  CBackprojectApp2.cpp  CBackprojectApp2.h  CBaloonComicApp.cpp  CBaloonComicApp.h  CBanknoteStainedApp.cpp  CBanknoteStainedApp.h  CCannyEdgeApp.cpp  CCannyEdgeApp.h  CCannyEdgeManualApp.cpp  CCannyEdgeManualApp.h  CCascadeClassifierApp.cpp  CCascadeClassifierApp.h  CColorizeApp.cpp  CColorizeApp.h  CContoursApp.cpp  CContoursApp.h  CContrastApp.cpp  CContrastApp.h  CConvexHullApp.cpp  CConvexHullApp.h  CCornerLocationSubpixelsApp.cpp  CCornerLocationSubpixelsApp.h  CCudaApp.cpp  CCudaApp.h  CExtractTextApp.cpp  CExtractTextApp.h  CFeatureDescApp.cpp  CFeatureDescApp.h  CFeatureDetectApp.cpp  CFeatureDetectApp.h  CFourierApp.cpp  CFourierApp.h  CHarrisCornerApp.cpp  CHarrisCornerApp.h  (+42 more)
ExtractingText/src/app/impl/application/background/: CCameraTestApp.cpp  CCameraTestApp.h  CCascadeClassifierApp.cpp  CCascadeClassifierApp.h  CHoughTransformApp.cpp  CHoughTransformApp.h  CProbabilityApp.cpp  CProbabilityApp.h
ExtractingText/src/app/impl/application/calculus/: CCalculusApp.cpp  CCalculusApp.h
ExtractingText/src/app/impl/application/poultry/: CCNNApp.cpp  CCNNApp.h  CManualFundamentalApp.cpp  CManualFundamentalApp.h  CParametricTemplateVectorApp.cpp  CParametricTemplateVectorApp.h  CPinaclePoutryApp.cpp  CPinaclePoutryApp.h
ExtractingText/src/app/impl/application/realworld/Camera/: CCameraTechApp.cpp  CCameraTechApp.h
ExtractingText/src/app/impl/application/realworld/CitizenID/: CCitizenIDApp.cpp  CCitizenIDApp.h
ExtractingText/src/app/impl/application/realworld/ExtractText/: CExtractTextV1.cpp  CExtractTextV1.h
ExtractingText/src/app/impl/application/realworld/FaceApp/: CFaceApp.cpp  CFaceApp.h  CHelenParser.cpp  CHelenParser.h
ExtractingText/src/app/impl/application/util/: CVideoCropApp.cpp  CVideoCropApp.h
ExtractingText/src/app/impl/background/: CMatrix.cpp  CMatrix.h
ExtractingText/src/app/impl/background/calculus/: CCalculusGeneral.cpp  CCalculusGeneral.h
ExtractingText/src/app/impl/background/cascade_classifier/: CDecisionOnlineLearning.cpp  CDecisionOnlineLearning.h
ExtractingText/src/app/impl/background/neural_network/: CFundamentalCNN.cpp  CFundamentalCNN.h
ExtractingText/src/app/impl/background/ocr/: COrientedStrokeDetect.cpp  COrientedStrokeDetect.h
ExtractingText/src/app/impl/background/probability/: CProbabilityUtil.cpp  CProbabilityUtil.h
ExtractingText/src/app/impl/cv/: CCVCore.cpp  CCVCore.h
ExtractingText/src/app/impl/deep/: CSVM.cpp  CSVM.h
ExtractingText/src/app/impl/general/: CCVConsole.h  CConsole.cpp  CConsole.h  CFileUtil.cpp  CFileUtil.h
ExtractingText/src/app/interface/: IApplication.h
ExtractingText/src/app/interface/approach/: ITemplateMatching.h
ExtractingText/src/app/interface/background/: IMatrix.h
ExtractingText/src/app/interface/background/calculus/: ICalculusGeneral.h
ExtractingText/src/app/interface/background/math/number/: INumberTheoryGeneral.h
ExtractingText/src/app/interface/background/modeling/: IConstant.h  IEquation.h  IFormula.h  IRange.h  IValueSpace.h  IVariable.h
ExtractingText/src/app/interface/background/modeling/builder/: IFormulaBuilder.h  ISummation.h
ExtractingText/src/app/interface/background/probability/: IAnything.h  IEventSpace.h  IProbabilityUtil.h  ISampleSpace.h  ISet.h  probability_struct.h
ExtractingText/src/app/interface/cv/: ICVCore.h  IMachinePaint.h
ExtractingText/src/app/interface/general/: IFileUtil.h  stdex.h
ExtractingText/src/app/test/cv/: CCVCoreUnitTest.cpp  CCVCoreUnitTest.h
Lab/DistanceTransform/: CMakeLists.txt  distrans.cpp
Opencv/dnn_caffe/: dnn_caffe.cpp
Opencv/text-module/: .gitignore
Opencv/text-module/textdetect/: CMakeLists.txt
Penciling/: CMakeLists.txt
Penciling/src/: main.cpp
VisionFundamental/data/skewtest01/: skewtest001.input
VisionFundamental/src/: CMakeLists.txt
VisionFundamental/src/VisionFundamental/: main.cpp
VisionFundamental/src/VisionFundamental/visionfund/impl/: CImgProcess.cpp  CImgProcess.h
VisionFundamental/src/VisionFundamental/visionfund/interface/: IHistogram.h  IImgProcess.h
VisionFundamental/src/VisionFundamental/visionlab/impl/: CLoadfontApp.cpp  CLoadfontApp.h  CNeuralNetworkApp.cpp  CNeuralNetworkApp.h  CPaintbox.cpp  CPaintbox.h
VisionFundamental/src/VisionFundamental/visionlab/impl/lab/: CDeskewLab.cpp  CDeskewLab.h
VisionFundamental/src/VisionFundamental/visionlab/impl/realapp/: CGridingImageApp.cpp  CGridingImageApp.h
VisionFundamental/src/VisionFundamental/visionlab/interface/: IApplication.h  IPaintbox.h
VisionFundamental/technique/: technique_01.txt
